--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,17 +1,23 @@
 ﻿@inherits LayoutComponentBase
+<body class="home page-template-default page page-id-52 custom-background elementor-default elementor-kit-27 elementor-page elementor-page-52">
+    <div class="preloader" style="display: none;"><div class="status" style="display: none;">&nbsp;</div></div>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+    <div id="mobilebgfix">
+        <div class="mobile-bg-fix-img-wrap">
+            <div class="mobile-bg-fix-img"></div>
         </div>
+        <div class="mobile-bg-fix-whole-site">
+            <NavMenu />
 
-        <article class="content px-4">
+            <header id="home" class="header" itemscope="itemscope" itemtype="http://schema.org/WPHeader" style="min-height: 76px;">
+                <!-- / END TOP BAR -->
+                <div class=" home-header-wrap">
+                    <div class="header-content-wrap "><div class="container"><h1 class="intro-text">Elect Steve on November 8</h1><div class="buttons"><a href="http://stevebratcher.com/about" class="btn btn-primary custom-button red-btn" data-wpel-link="internal" target="_self" rel="noopener noreferrer">Get to know Steve</a><a href="https://secure.anedot.com/c0435ad2-e0e4-4d49-b7f9-23bf1ee1bf65/donate" class="btn btn-primary custom-button green-btn" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">Donate</a></div></div></div><!-- .header-content-wrap --><div class="clear"></div>
+                </div>
+
+            </header> <!-- / END HOME SECTION  -->
             @Body
-        </article>
-    </main>
-</div>
+        </div>
+    </div>
+    <Footer/>
+</body>
