Added contaact in preparation to create a functioning contact form.

--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -21,7 +21,7 @@
 
                 <div class="site-title-tagline-wrapper">
                     <h1 class="site-title">
-                        <a href=" https://stevebratcher.com/ " data-wpel-link="internal" target="_self" rel="noopener noreferrer">
+                        <a href="/" data-wpel-link="internal" target="_self" rel="noopener noreferrer">
                             Steve Bratcher for the 25th District
                         </a>
                     </h1>
