Minor styling updates

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,24 @@
 ﻿@page "/"
 
 <PageTitle>Index</PageTitle>
-<div id="content" class="site-content">
+
+    <!-- / END TOP BAR -->
+    <div class=" home-header-wrap">
+        <div class="header-content-wrap ">
+            <div class="container">
+                <h1 class="intro-text">Elect Steve on November 8</h1>
+                <div class="buttons">
+                    <a href="/about" class="btn btn-primary custom-button red-btn" data-wpel-link="internal" target="_self" rel="noopener noreferrer">Get to know Steve</a>
+                    <a href="https://secure.anedot.com/c0435ad2-e0e4-4d49-b7f9-23bf1ee1bf65/donate" class="btn btn-primary custom-button green-btn" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">Donate</a>
+                </div>
+            </div>
+        </div>
+        <!-- .header-content-wrap -->
+        <div class="clear">
+        </div>
+    </div>
+
+<di id="content" class="site-content">
 
     <section class="about-us " id="aboutus">
 
@@ -169,7 +186,7 @@
 
     </section> <!-- / END CONTACT US SECTION-->
 
-</div><!-- .site-content -->
+</di><!-- .site-content -->
 <!-- Enter your scripts here -->
 <link rel="stylesheet" id="forminator-module-css-161-css" href="http://stevebratcher.com/wp-content/uploads/forminator/161_7a45ed60d4f4e5072a30dacf093708db/css/style-161.css?ver=1646009665" type="text/css" media="all">
 <link rel="stylesheet" id="forminator-icons-css" href="https://stevebratcher.com/wp-content/plugins/forminator/assets/forminator-ui/css/forminator-icons.min.css?ver=1.23.3" type="text/css" media="all">
