Added css styles to local path so they can be easily edited, also created a new layout that includes a background image

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
-
+@layout HeroImageLayout
 <PageTitle>Index</PageTitle>
 
     <!-- / END TOP BAR -->
-    <div class=" home-header-wrap">
+    <div class="home-header-wrap">
         <div class="header-content-wrap ">
             <div class="container">
                 <h1 class="intro-text">Elect Steve on November 8</h1>
