Minor styling updates

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,22 +1,22 @@
 ﻿@page "/"
-@layout HeroImageLayout
+@layout BackgroundImageLayout
 <PageTitle>Index</PageTitle>
 
-    <!-- / END TOP BAR -->
-    <div class="home-header-wrap">
-        <div class="header-content-wrap ">
-            <div class="container">
-                <h1 class="intro-text">Elect Steve on November 8</h1>
-                <div class="buttons">
-                    <a href="/about" class="btn btn-primary custom-button red-btn" data-wpel-link="internal" target="_self" rel="noopener noreferrer">Get to know Steve</a>
-                    <a href="https://secure.anedot.com/c0435ad2-e0e4-4d49-b7f9-23bf1ee1bf65/donate" class="btn btn-primary custom-button green-btn" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">Donate</a>
-                </div>
+<!-- / END TOP BAR -->
+<div class="home-header-wrap">
+    <div class="header-content-wrap ">
+        <div class="container">
+            <h1 class="intro-text">Elect Steve on November 8</h1>
+            <div class="buttons">
+                <a href="/about" class="btn btn-primary custom-button red-btn" data-wpel-link="internal" target="_self" rel="noopener noreferrer">Get to know Steve</a>
+                <a href="https://secure.anedot.com/c0435ad2-e0e4-4d49-b7f9-23bf1ee1bf65/donate" class="btn btn-primary custom-button green-btn" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">Donate</a>
             </div>
         </div>
-        <!-- .header-content-wrap -->
-        <div class="clear">
-        </div>
     </div>
+    <!-- .header-content-wrap -->
+    <div class="clear">
+    </div>
+</div>
 
 <di id="content" class="site-content">
 
@@ -38,42 +38,27 @@
 
                 <div class="col-lg-12 col-md-12 column zerif-rtl-skills ">
 
-                    <ul class="skills" data-scrollreveal="enter right after 0s over 1s" data-sr-init="true" data-sr-complete="true">
+                    <ul class="skills" data-scrollreveal="enter right after 0s over 1s">
 
                         <!-- SKILL ONE -->
                         <li class="skill skill_1">
                             <div class="skill-count">
                                 <div style="display: inline; width: 64px; height: 200px;">
-                                    <canvas width="64" height="200"></canvas>
+                                    <canvas width="128" height="400" style="width: 64px;height: 200px;"></canvas>
                                     <input role="presentation" type="text" id="military-backgound" value="100" data-thickness=".2" class="skill1" tabindex="-1" readonly="readonly" style="width: 36px; height: 21px; position: absolute; vertical-align: middle; margin-top: 21px; margin-left: -50px; border: 0px; background: none; font: bold 12px Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; appearance: none;">
                                 </div>
                             </div>
                             <div class="section-legend">
                                 <label for="military-backgound">Military Backgound</label>
-                            </div><p>Served in the US Air Force and currently serves in the Kentucky Air National Guard</p>
+                            </div>
+                            <p>Served in the US Air Force and currently serves in the Kentucky Air National Guard</p>
                         </li>
                         <!-- SKILL TWO -->
 
-                        <li class="skill skill_2">
-                            <div class="skill-count">
-                                <div style="display: inline; width: 64px; height: 200px;">
-                                    <canvas width="64" height="200"></canvas>
-                                    <input role="presentation" type="text" id="business-minded" value="100" data-thickness=".2" class="skill2" tabindex="-1" readonly="readonly" style="width: 36px; height: 21px; position: absolute; vertical-align: middle; margin-top: 21px; margin-left: -50px; border: 0px; background: none; font: bold 12px Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; appearance: none;">
-                                </div>
-                            </div><div class="section-legend"><label for="business-minded">Business Minded</label></div><p>Owns a real estate business and served as a broker for many years</p>
-                        </li>
+                        <li class="skill skill_2"><div class="skill-count"><div style="display: inline; width: 64px; height: 200px;"><canvas width="128" height="400" style="width: 64px; height: 200px;"></canvas><input role="presentation" type="text" id="business-minded" value="100" data-thickness=".2" class="skill2" tabindex="-1" readonly="readonly" style="width: 36px; height: 21px; position: absolute; vertical-align: middle; margin-top: 21px; margin-left: -50px; border: 0px; background: none; font: bold 12px Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; appearance: none;"></div></div><div class="section-legend"><label for="business-minded">Business Minded</label></div><p>Owns a real estate business and served as a broker for many years</p></li>
                         <!-- SKILL THREE -->
 
-                        <li class="skill skill_3">
-                            <div class="skill-count">
-                                <div style="display: inline; width: 64px; height: 200px;">
-                                    <canvas width="64" height="200"></canvas><input role="presentation" type="text" id="community-active" value="100" data-thickness=".2" class="skill3" tabindex="-1" readonly="readonly" style="width: 36px; height: 21px; position: absolute; vertical-align: middle; margin-top: 21px; margin-left: -50px; border: 0px; background: none; font: bold 12px Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; appearance: none;">
-                                </div>
-                            </div>
-                            <div class="section-legend">
-                                <label for="community-active">Community Active</label>
-                            </div><p>Serves as a constable in Hardin County and serves on many boards including Habitat for Humanity</p>
-                        </li>
+                        <li class="skill skill_3"><div class="skill-count"><div style="display: inline; width: 64px; height: 200px;"><canvas width="128" height="400" style="width: 64px; height: 200px;"></canvas><input role="presentation" type="text" id="community-active" value="100" data-thickness=".2" class="skill3" tabindex="-1" readonly="readonly" style="width: 36px; height: 21px; position: absolute; vertical-align: middle; margin-top: 21px; margin-left: -50px; border: 0px; background: none; font: bold 12px Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; appearance: none;"></div></div><div class="section-legend"><label for="community-active">Community Active</label></div><p>Serves as a constable in Hardin County and serves on many boards including Habitat for Humanity</p></li>
                         <!-- SKILL FOUR -->
 
 
@@ -82,8 +67,7 @@
                 </div> <!-- / END SKILLS COLUMN-->
 
 
-            </div> <!-- / END 3 COLUMNS OF ABOUT US-->
-            <!-- CLIENTS -->
+            </div>            <!-- CLIENTS -->
 
         </div> <!-- / END CONTAINER -->
 
