--- a/Client/Shared/BackgroundImageLayout.razor
+++ b/Client/Shared/BackgroundImageLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-<body class="custom-background">
+<body class="home page-template-default page page-id-52 custom-background elementor-default elementor-kit-27 elementor-page elementor-page-52">
 <div class="preloader" style="display: none;"><div class="status" style="display: none;">&nbsp;</div></div>
 
 <div id="mobilebgfix">
