--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -15,7 +15,7 @@
                                     <h5 class="text-white text-uppercase mb-3 animated slideInDown">ELECT</h5>
                                     <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Steve Bratcher</h1>
                                     <h6 class="text-white text-uppercase mb-3 animated slideInDown">For the 25th District</h6>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Donate<i class="fa fa-arrow-right ms-3"></i></a>
+                                    <a href="https://secure.anedot.com/c0435ad2-e0e4-4d49-b7f9-23bf1ee1bf65/donate" class="btn btn-primary py-3 px-5 animated slideInDown">Donate<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
                                     <img class="img-fluid" src="img/carousel-1.png" alt="">
