Added toggle to nav bar and other minor styling updates

--- a/Client/Components/Contact.razor
+++ b/Client/Components/Contact.razor
@@ -36,27 +36,7 @@
                         <button type="submit" class="btn v7">Submit</button>
                     </EditForm>
                 }
-            </div>
-            <div class="col-md-5 offset-md-1">
-                <div class="contact-content">
-                    <div class="contact-icon">
-                        <i class="ion-ios-telephone-outline"></i>
-                    </div>
-                    <div class="contact-details">
-                        <h5>Phone</h5>
-                        <p> <a href="tel:+2798729009">+1(270) 872-9009</a></p>
-                    </div>
-                </div>
-                <div class="contact-content">
-                    <div class="contact-icon">
-                        <i class="ion-ios-email-outline"></i>
-                    </div>
-                    <div class="contact-details">
-                        <h5>Enquiries</h5>
-                        <p>ian.cosborne@yahoo.com</p>
-                    </div>
-                </div>
-            </div>
+            </div>s
         </div>
     </div>
 </section>
