--- a/Client/wwwroot/scss/bootstrap.scss
+++ b/Client/wwwroot/scss/bootstrap.scss
@@ -5,9 +5,9 @@ $secondary: #151569;
 $light: #e1e4e5;
 $dark: #111111;
 
-$font-family-base: 'Ubuntu', sans-serif;
+$font-family-base: 'Bitter', serif;
 
-$headings-font-family: 'Barlow', sans-serif;
+$headings-font-family: 'Lora', serif;
 
 $body-color: $primary;
 
