--- a/Client/Shared/Footer.razor
+++ b/Client/Shared/Footer.razor
@@ -1,18 +1,38 @@
-﻿<footer>
-    <div>
-        <div>
-            <div>electstevebratcher@gmail.com</div>
+﻿<div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+                <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+            </div>
+            <div class="col-lg-3 col-md-6">
+            </div>
+            <div class="col-lg-3 col-md-6">
+            </div>
         </div>
-        <div>
-            <ul>
-                <li>
-                    <a target="_blank" href="https://www.facebook.com/Steve-Bratcher-for-State-Representative-104570065503217" data-wpel-link="external" rel="external noopener noreferrer">
-                        <span>Facebook link</span>
-                        <i></i>
-                    </a>
-                </li>
-            </ul><!-- .social -->
-            <p>Paid for by Steve Bratcher for State Representative</p>
+    </div>
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    Built by <a class="border-bottom" href="https://ianosborne.dev">Ian Osborne</a>
+                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                    using designs by <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <div class="footer-menu">
+                        <div>electstevebratcher@gmail.com</div>
+
+                        <p>Paid for by Steve Bratcher for State Representative</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div> <!-- / END CONTAINER -->
-</footer> <!-- / END FOOOTER  -->
+    </div>
+</div>
