--- a/Client/wwwroot/css/bootstrap.css
+++ b/Client/wwwroot/css/bootstrap.css
@@ -46,7 +46,7 @@
 
 body {
   margin: 0;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Bitter", serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -71,7 +71,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Barlow", sans-serif;
+  font-family: "Lora", serif;
   font-weight: 700;
   line-height: 1.2;
   color: #151569;
@@ -5198,7 +5198,7 @@ textarea.form-control-lg {
   z-index: 1080;
   display: block;
   margin: 0;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Bitter", serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5300,7 +5300,7 @@ textarea.form-control-lg {
   z-index: 1070;
   display: block;
   max-width: 276px;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Bitter", serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
