--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -32,7 +32,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-award fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-briefcase fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
@@ -50,12 +50,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-people-carry fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
                             <h5 class="mb-3">Community Active</h5>
-                            <p>Serves as a constable in Hardin County and serves on many boards including Habitat for Humanity</p>
+                            <p>Serves as a constable in Hardin County and serves on many bboards including Habitat for Humanity</p>
                         </div>
                     </div>
                 </div>
